chore: Add sibar and also side bar nav links card for dynamic changes

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Any Task</title>
 </head>
+
 <body>
-  <h1>Hello</h1>
+  <div class="main__container">
+    <aside id="side__bar">
+
+    </aside>
+    <main class="contents__container">
+
+    </main>
+  </div>
 </body>
+
 </html>
