feat: Finish creating the sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,15 @@
 <body>
   <div class="main__container">
     <aside id="side__bar">
-
+      <div class="side__bar-lower">
+        <div class="projects__container">
+          <h1 class="project__text">My Projects</h1>
+        </div>
+        <div class="add__projects-container">
+          <img src="./assets/icons/bx-plus-circle.svg" alt="plus circle icon">
+          <p>Add Project</p>
+        </div>
+      </div>
     </aside>
     <main class="contents__container">
 
