chore: added some contents for the add project modal

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,10 @@
           <h1 class="project__text">My Projects</h1>
         </div>
         <div class="add__projects-container">
-          <img src="./assets/icons/bx-plus-circle.svg" alt="plus circle icon">
-          <p>Add Project</p>
+          <button type="button" class="add__project-btn">
+            <img src="./assets/icons/bx-plus-circle.svg" alt="plus circle icon">
+            <p>Add Project</p>
+          </button>
         </div>
       </div>
     </aside>
