chore: added modal but still need to improve and make it much better

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       </div>
     </aside>
     <main class="contents__container">
-
+      <div class="dialog__container"></div>
     </main>
   </div>
 </body>
