chore: manage to add project names on sidebar and also add style

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
       <div class="side__bar-lower">
         <div class="projects__container">
           <h1 class="project__text">My Projects</h1>
+          <div class="project__list">
+            
+          </div>
         </div>
         <div class="add__projects-container">
           <button type="button" class="add__project-btn">
