chore: Added modal container for the edit form

--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,17 @@
         </div>
       </div>
     </div>
+    <div class="dialog__container-edit hidden" id="modal__edit">
+      <div class="dialog__sub-container">
+        <div class="form__container">
+          <form id="edit__form"></form>
+          <div class="grouped__btn">
+            <button type="button" class="cancel__btn btn" data-modal-action="close_edit">Cancel</button>
+            <button type="submit" class="add__btn btn edit__task-btn" data-add-target="edit">Update</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <main class="contents__container">
     </main>
   </div>
