chore: able to delete specific task

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
           </div>
         </div>
       </div>
-    </div>  
+    </div>
     <div class="dialog__container-del hidden" id="modal__del">
       <div class="dialog__sub-container">
         <div class="form__container">
@@ -65,11 +65,11 @@
           </div>
           <div class="grouped__btn-del">
             <button type="button" class="cancel__btn btn" data-modal-action="close_del">Cancel</button>
-            <button type="submit" class="add__btn btn del__task-btn" data-add-target="delete">Confirm</button>
+            <button type="submit" class="add__btn btn del__task-btn" data-add-target="delete_task">Confirm</button>
           </div>
         </div>
       </div>
-    </div>  
+    </div>
     <main class="contents__container">
     </main>
   </div>
