chore: change add project icon color and text to primary color

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="add__projects-container">
           <button type="button" class="add__project-btn" data-open-modal="project">
-            <img src="./assets/icons/bx-plus-circle.svg" alt="plus circle icon">
+            <img src="./assets/icons/bx-plus-circle.png" alt="plus circle icon" class="add__project-icon">
             <p>Add Project</p>
           </button>
         </div>
