feat: able to display task on all page and only able to see all task

--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,7 @@
         </div>
       </div>
     </div>
-    <main class="contents__container">
-    </main>
+    <main class="contents__container"></main>
   </div>
 </body>
 
